# job-outreach

./: .gitignore  README.md
.github/workflows/: daily-digest.yml
job-outreach/: __init__.py  config.py  db.py  digest.py  mailer.py  pipeline.py  pyproject.toml  scraper.py
job-outreach/admin/: app.py
job-outreach/admin/templates/: base.html  digests.html  edit_subscriber.html  error.html  index.html  jobs.html  subscribers.html
job-outreach/migrations/: 001_initial_schema.sql
job-outreach/tests/: conftest.py
